Updated borrow functionality and added profile page

--- a/src/components/Residencies/Residencies.css
+++ b/src/components/Residencies/Residencies.css
@@ -11,7 +11,8 @@
     transition: all 300 ms ease-in;
 }
 .r-card img{
-    width: 100%;
+    /* width: 100%; */
+    width: 200px;
     max-width: 20rem;
 }
 .r-price{
