--- a/src/components/GetStarted/GetStarted.css
+++ b/src/components/GetStarted/GetStarted.css
@@ -2,7 +2,8 @@
     gap: 0.5rem;
     justify-content: center;
     align-items: center;
-    width: 75%;
+    width: 100%;
+    margin: auto;
     height: 13rem;
     background: var(--blue);
     border-radius: 10px ;
