--- a/src/components/Checkout/Checkout.css
+++ b/src/components/Checkout/Checkout.css
@@ -92,6 +92,7 @@
     padding: 6px 12px;
     border-radius: 6px;
     font-size: 14px;
+    width: 7rem;
     cursor: pointer;
     transition: background-color 0.2s ease;
   }
