--- a/src/components/Loans/Loans.css
+++ b/src/components/Loans/Loans.css
@@ -1,12 +1,18 @@
 .loans-container {
     padding: 20px;
-    max-width: 800px;
+    background-color: #f9f9f9;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    max-width: 900px;
     margin: 0 auto;
 }
 
 .title {
-    text-align: center;
+    font-size: 24px;
+    font-weight: bold;
+    color: #333;
     margin-bottom: 20px;
+    text-align: center;
 }
 
 .loans-summary {
@@ -16,55 +22,93 @@
 }
 
 .summary-item {
-    text-align: center;
-    padding: 10px;
+    background-color: #fff;
     border: 1px solid #ddd;
-    border-radius: 5px;
-    background-color: #f9f9f9;
+    border-radius: 8px;
+    padding: 20px;
+    width: 40%;
+    text-align: center;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 .summary-item h3 {
-    margin: 0;
-    font-size: 1.2em;
+    font-size: 18px;
+    color: #555;
+    margin-bottom: 10px;
 }
 
 .count {
-    font-size: 2em;
-    color: #333;
+    font-size: 36px;
+    font-weight: bold;
+    color: #007bff;
 }
 
 .loans-section {
     margin-bottom: 20px;
 }
 
-.loans-section h3 {
-    margin-bottom: 10px;
-    font-size: 1.5em;
+.dropdown-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 20px;
     color: #333;
+    margin-bottom: 10px;
+    cursor: pointer;
+    background-color: #f4f4f4;
+    padding: 10px;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.dropdown-button {
+    background: none;
+    border: none;
+    font-size: 20px;
+    cursor: pointer;
 }
 
 .loans-list {
     list-style-type: none;
     padding: 0;
-    margin: 0;
 }
 
 .loan-item {
-    padding: 10px;
-    margin-bottom: 10px;
+    background-color: #fff;
     border: 1px solid #ddd;
-    border-radius: 5px;
-    background-color: #f9f9f9;
+    border-radius: 8px;
+    padding: 15px;
+    margin-bottom: 10px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    transition: transform;
 }
 
-.loan-item:nth-child(odd) {
-    background-color: #f1f1f1;
+.sort-button {
+    background-color: white;
+    color: black;
+    border: 1px solid gray;
+    padding: 10px 20px;
+    border-radius: 4px;
+    cursor: pointer;
+    margin-bottom: 10px;
+    transition: background-color 0.3s, transform 0.3s;
+    font-size: 15px;
+    font-style: italic;
+    /* font-weight: bold; */
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    display: block;
+    width: 100%;
+    max-width: 200px;
+    /* margin: 10px auto; */
+    text-align: center;
 }
 
-.loan-item p {
-    margin: 5px 0;
+.sort-button:hover {
+    background-color: rgb(212, 212, 212);
+    transform: translateY(-2px);
 }
 
-.loan-item strong {
-    color: #333;
+.sort-button:active {
+    /* background-color: #004494; */
+    transform: translateY(0);
 }
